# fieldbench

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: anthropic_runner.py  langchain_runner.py  llamaindex_runner.py  openai_runner.py
scripts/: parity_koji.py
src/fieldbench/: __init__.py  aggregate.py  cli.py  corpus.py  run.py  scoring.py
tests/: test_corpus.py  test_run.py  test_scoring.py
