[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fieldbench"
version = "0.1.0"
description = "A cross-domain, field-level benchmark for schema-driven document extraction"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Frank Thomas" }]
keywords = ["benchmark", "document-extraction", "information-extraction", "evaluation", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["pyyaml>=6"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]

[project.urls]
Homepage = "https://github.com/fieldbench/fieldbench"
Corpus = "https://github.com/fieldbench/corpus"

[project.scripts]
fieldbench = "fieldbench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"
